<resources>
    <string name="app_name">studyship-android</string>


    <string name="app_bar_name">StudyShip</string>
    <!--    Bottom Navigation Title     -->
    <string name="search_title">검색</string>
    <string name="study_category">카테고리</string>
    <string name="my_study_string">내 스터디</string>
    <string name="message_room">쪽지</string>
    <string name="profile_string">프로필</string>

    <!--    appbar string   -->
    <string name="edit_text_hint">스터디 검색</string>
    <string name="profile_setting">프로필관리 ></string>
    <string name="category_item_text">카테고리</string>

    <!--    Back Button String  -->
    <string name="back_button_click_message">뒤로가기 버튼을 한번 더 누를시 종료됩니다.</string>

    <!--    Apply Study String  -->
    <string name="reply_response_percent">답변 응답률 $1%d</string>
    <string name="go_to_study_feed_from_captain">스터디 이력 보러가기 ></string>
    <string name="make_user_name">선장 김수민</string>
    <string name="detail_study_label">스터디 정보</string>
    <string name="date">날짜</string>
    <string name="prefer_location">선호장소</string>
    <string name="people">인원</string>
    <string name="level">레벨</string>
    <string name="time">시간</string>
    <string name="deadline">멤버 모집 마감일</string>
    <string name="goal_label">목표</string>

    <!--    Sign-in String  -->
    <string name="sign_in_default_string">나랑 잘 맞는 스터디메이트,\n 스터디쉽에서 간편하게 구해보세요!</string>
    <string name="sign_in_email">이메일로 로그인</string>
    <string name="sign_in_email_hint">이메일</string>
    <string name="sign_in_password_hint">비밀번호</string>
    <string name="sign_button_text">로그인</string>
    <string name="keep_login_text">로그인 상태 유지</string>
    <string name="sns_login_divide">Or</string>
    <string name="google_login">구글 계정으로 로그인</string>
    <string name="kakao_login">카카오 계졍으로 로그인</string>

    <string-array name="sign_up_array">
        <item>⛵️ 지금 바로 회원가입</item>
        <item>😢 비밀번호를 까먹었어요</item>
    </string-array>

    <string name="back_key_error_string">
        뒤로가기 버튼을 다시 눌러주세요.
    </string>

    <string name="suggestion_comment">%1$s님을 위한 추천 스터디</string>

    <string name="suggest_study">추천 검색어</string>

    <string name="search_category_filter_string">카테고리</string>

    <!--    BottomSheet String  -->
    <string name="user_not_click_anything"> </string>
    <string name="user_clicked_item_size">%1$d</string>

    <!--    MakeStudy BottomSheet String    -->
    <string name="make_new_study">새로운 스터디</string>
    <string name="temporary_storage_my_study">임시 저장 (%1$d)</string>
    <string name="temporary_storage_my_study_empty">임시 저장</string>

    <!--    Make Study String   -->
    <string name="make_study_take_one">스터디 만들기(1/2)</string>
    <string name="make_study_take_two">스터디 만들기(2/2)</string>
    <string name="next_make_study_view">다음</string>
    <string name="make_study_before_step">이전</string>
    <string name="finish_make_study">완료</string>
    <string name="user_info_string">기본정보</string>
    <string name="study_name">제목</string>
    <string name="study_goal_hint_string">예: 에이비엔비 UI 분석</string>
    <string name="go_to_category">카테고리 선택 (최대 2개)</string>
    <string name="add_study_step_one">1</string>
    <string name="add_study_step_two">2</string>
    <string name="user_prefer_place">선호장소</string>
    <string name="gather_date">모이는 날짜</string>
    <string name="gather_hint_string">복수선택가능</string>
    <string name="user_want_study_level">레벨</string>
    <string name="user_want_study_time">모임 시간</string>
    <string name="user_how_many">인원</string>
    <string name="when_deadline_setting">언제 멤버 모집을 마감할까요?</string>
    <string name="make_study_detail_info">상세설명</string>
    <string name="study_goal_label">스터디목표(30자 이내)</string>
    <string name="study_description">스터디 설명</string>
    <string name="study_tendency">스터디 성향</string>
    <string name="study_description_length_string">%1$d / 500</string>
    <string name="study_tag">태그 (최대 5개)</string>
    <string name="study_tag_hint">#태그를 입력주세요. 예) 피그마</string>
    <string name="study_tag_alert_tv">스페이스를 누르면 자동으로 #가 추가됩니다.\n 태그를 설정하면 정확한 스터디 검색을 도와줍니다 :)</string>

    <!--    My Study Page   -->
    <string name="my_study_joined">현재 가입한 스터디</string>
    <string name="my_study_own">만든 스터디</string>
    <string name="my_study_already">신청한</string>
    <string name="my_study_bookmark">북마크한 스터디</string>
    <string name="my_study_temporary">임시저장 글</string>

    <string name="how_many_study_card">%1$s</string>
    <string name="how_many_comments">%1$d</string>

    <string name="maintain_user_title">선장</string>

    <!--    SignUp Page    -->
    <string name="sign_up_title">이메일 계정으로 가입</string>
    <string name="nickname_hint">이름(닉네임)</string>
    <string name="email_hint">이메일</string>
    <string name="password_hint">비밀번호</string>
    <string name="password_check_hint">비밀번호 확인</string>
    <string name="finish">완료</string>
    <string name="next">다음</string>
    <string name="name_regex_error_message">영어, 한글, 숫자만 가능합니다.</string>
    <string name="blank_error_message">공백이 들어갈 수 없습니다.</string>
    <string name="email_regex_error_message">이메일 형식에 맞지 않습니다.</string>
    <string name="password_regex_error_message">영어 특수문자 포함 8 – 12 자리여야 합니다.</string>
    <string name="password_check_error_message">비밀번호가 일치하지 않습니다.</string>

    <!--    Category    -->
    <string name="mylocation_label">내 근처 중심</string>
    <string name="current_location">현재 위치</string>
    <string name="detail_location_label">상세 위치 선택</string>

    <!--    MyProfile   -->
    <string name="members">함께한 멤버</string>
    <string name="notice">공지사항</string>
    <string name="app_setting">앱 설정</string>
    <string name="qna">문의 정보</string>
    <string name="app_version">앱 버전</string>

    <!--    Animated Dialog    -->
    <string name="login_alert_title">회원가입 / 로그인 후 이용해주세요</string>
    <string name="login">회원가입 / 로그인</string>
    <string name="cancel">취소</string>
</resources>
