<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_study"
        android:icon="@drawable/ic_icon_bnb_search"
        android:title="@string/search_title" />

    <item
        android:id="@+id/category_study"
        android:icon="@drawable/ic_icon_bnb_category"
        android:title="@string/study_category" />

    <item
        android:id="@+id/my_study"
        android:icon="@drawable/ic_icon_bnb_my_study"
        android:title="@string/my_study_string"/>

    <item
        android:id="@+id/message_room"
        android:icon="@drawable/ic_icon_bnb_chat"
        android:title="@string/message_room" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_icon_bnb_profile"
        android:title="@string/profile_string" />
</menu>