<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent"
        tools:context=".ui.activity.SignInActivity"
        android:paddingTop="@dimen/spacing_large">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@color/appbar_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_home_fragment"
                    android:layout_width="@dimen/spacing_x_large"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/spacing_x_large"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:src="@drawable/ic_keyboard_backspace_black_24dp"/>

                <TextView
                    android:layout_toEndOf="@+id/back_home_fragment"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/spacing_x_large"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/app_bar_name"
                    android:layout_marginEnd="@dimen/spacing_xx_large"
                    android:textColor="@color/app_bar_color"
                    android:textSize="@dimen/text_large" />
            </RelativeLayout>


        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing_large" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing_large" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xx_large"
            android:gravity="center"
            android:text="@string/sign_in_default_string"
            android:textColor="@color/main_color_black"
            android:textSize="@dimen/text_x_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_xxx_large"
            android:text="@string/sign_in_email"
            android:textColor="@color/app_bar_color"
            android:textSize="@dimen/text_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <com.studyship.application.ui.widget.SSEditText
            android:id="@+id/SSEditText"
            android:layout_width="0dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_height="@dimen/spacing_xxx_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:hint="@string/sign_in_email_hint"
            android:paddingStart="@dimen/spacing_x_large"
            android:paddingEnd="@dimen/spacing_x_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <com.studyship.application.ui.widget.SSEditText
            android:id="@+id/SSEditText2"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:layout_height="@dimen/spacing_xxx_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_large"
            android:hint="@string/sign_in_password_hint"
            android:paddingStart="@dimen/spacing_x_large"
            android:paddingEnd="@dimen/spacing_x_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SSEditText" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="@drawable/login_button_bg"
            android:text="@string/sign_button_text"
            android:textColor="@color/login_button_text_color"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SSEditText2" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:button="@drawable/custom_check_box_bg"
            android:text="@string/keep_login_text"
            android:textColor="@color/check_box_default_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sns_login_divide"
            android:textColor="@color/check_box_false_color"
            android:textSize="@dimen/text_x_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="@drawable/sns_login_button_bg"
            android:text="@string/kakao_login"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/sns_login_button_bg"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/google_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>