<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.tsdev.presentation.MakeStudyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.createstudy.CreateStudyStepTwoActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:src="@drawable/ic_close_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/make_study_take_two"
                    android:textColor="@color/main_color_black"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <FrameLayout
                    android:id="@+id/make_study_before_step"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_toLeftOf="@+id/finish_make_study">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:onClick="@{() -> vm.moveNextStep()}"
                        android:text="@string/make_study_before_step"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/finish_make_study"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/finish_make_study"
                        android:textColor="@color/main_color_blue"
                        android:textStyle="bold" />

                </FrameLayout>
            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView18"
                    style="@style/SecondStepIndicator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_study_step_one"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView19"
                    style="@style/FirstStepIndicator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_study_step_two"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
                    app:layout_constraintStart_toEndOf="@+id/textView18"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:text="@string/make_study_detail_info"
                    android:textColor="@color/main_color_black"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
                    app:layout_constraintStart_toEndOf="@+id/textView19" />


                <TextView
                    android:id="@+id/study_goal_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:text="@string/study_goal_label"
                    android:textColor="@color/main_color_black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:hint="@string/study_goal_hint_string"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/study_goal_label" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:text="@string/study_description"
                    android:textColor="@color/main_color_black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText" />

                <EditText
                    android:background="@drawable/bg_study_description"
                    android:id="@+id/study_description"
                    android:layout_width="0dp"
                    android:layout_height="137dp"
                    android:layout_margin="@dimen/spacing_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView23" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:text="@string/study_tendency"
                    android:textColor="@color/main_color_black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/study_description" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/study_description_length_string, studyDescription.text.length())}"
                    android:textColor="@color/appbar_start_color"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:layout_marginEnd="@dimen/spacing_large"
                    app:layout_constraintBottom_toBottomOf="@+id/study_description"
                    app:layout_constraintEnd_toEndOf="@+id/study_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>