<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CreateStudyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_large"
                android:src="@drawable/ic_close_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/make_study_take_one"
                android:textColor="@color/main_color_black"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/next_make_study_view"
                    android:textStyle="bold" />
            </FrameLayout>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView18"
        style="@style/FirstStepIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_mini"
        android:text="@string/user_info_string"
        android:textColor="@color/main_color_black"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <TextView
        android:id="@+id/textView19"
        style="@style/SecondStepIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:hint="@string/study_name"
        android:textSize="@dimen/text_x_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/spacing_large"
            android:text="@string/go_to_category" />
        
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_sharp_chevron_right_24"/>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>